Updated RSVP links

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<div class="four columns"><h4 class="bold"><a href="index.html" class="blue header2">THE WEDDING DAY</a></h4></div>
 			<div class="four columns"><h4 class="bold"><a href="additional.html" class="pink header2">ADDITIONAL INFORMATION</a></h4></div>
 			<div class="four columns"><h4 class="bold"><a href="traveller.html" class="pink header2">TRAVELLER INFORMATION</a></h4></div>
-			<div class="four columns"><h4 class="bold"><a href="traveller.html" class="pink header2">RSVP</a></h4></div>
+			<div class="four columns"><h4 class="bold"><a href="rsvp.html" class="pink header2">RSVP</a></h4></div>
 		</div>
 		<!--<div class="spacing2">
 			<div class="row">
