Added content to traveller site

--- a/traveller.html
+++ b/traveller.html
@@ -101,7 +101,8 @@
 				<div class="content-entry">
 					<h4 class="bold align-left spacing6">RESTAURANTS</h4>
 					<ul>
-						<li type="circle">Chat Thai - best thai in Sydney. They do a mean supper. Pad Thai (of course!), the deep fried dough with kaya and skewers galore.</li>
+						<li type="circle">Chat Thai - bad ass thai. They do a mean supper. Pad Thai (of course!), the deep fried dough with kaya and skewers galore.</li>
+						<li type="circle">Spice I Am - also bad ass thai.</li>
 						<li type="circle">BBQ King - for cheap roast duck and pork chinese style, don't forget to order the house soup (if it doesn’t come out automatically).</li>
 						<li type="circle">Mary's - for tasty burgers (vego included), an eclectic selection of local beers and loud metal music.</li>
 						<li type="circle">Da Mario - pizza, neapolitan style</li>
