updated files to remove .html in address bar

--- a/traveller.html
+++ b/traveller.html
@@ -48,10 +48,10 @@
 			</div>
 		</div>
 		<div class="row navigation-top border-bottom">
-			<div class="four columns"><h4 class="bold"><a href="index.html" class="pink header2">THE WEDDING DAY</a></h4></div>
-			<div class="four columns"><h4 class="bold"><a href="additional.html" class="pink header2">ADDITIONAL INFORMATION</a></h4></div>
-			<div class="four columns"><h4 class="bold"><a href="traveller.html" class="blue header2">TRAVELLER INFORMATION</a></h4></div>
-			<div class="four columns"><h4 class="bold"><a href="rsvp.html" class="pink header2">RSVP</a></h4></div>
+			<div class="four columns"><h4 class="bold"><a href="index" class="pink header2">THE WEDDING DAY</a></h4></div>
+			<div class="four columns"><h4 class="bold"><a href="additional" class="pink header2">ADDITIONAL INFORMATION</a></h4></div>
+			<div class="four columns"><h4 class="bold"><a href="traveller" class="blue header2">TRAVELLER INFORMATION</a></h4></div>
+			<div class="four columns"><h4 class="bold"><a href="rsvp" class="pink header2">RSVP</a></h4></div>
 		</div>
 		<div class="row spacing1">
 			<div class="four columns navigation-left">
